Add basic support of playlist
bug fix + code clean up

- Add internal playlist for historic / relative streams / favorites streams
- Code clean up and refactor

- Database schema refactor
- Fix PlayList position bug in some case

- clean up code + bug fix + improve performance